changed file structure

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,12 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/css/bundle.css'>
+	<link rel='stylesheet' href='/atomicCss/dist/util_base.css'>
+	<link rel='stylesheet' href='/atomicCss/dist/util_base.css.map'>
 
-	
 	<!-- ad design system specific style -->
-	<link rel='stylesheet' href='/dse-style/css/buttons.min.css'>
-	<link rel='stylesheet' href='/dse-style/css/text.min.css'>
+	<!-- <link rel='stylesheet' href='/dse-style/css/buttons.min.css'>
+	<link rel='stylesheet' href='/dse-style/css/text.min.css'> -->
 	<!-- <link rel='stylesheet' href='/design-system/css/utils.min.css'> -->
 	
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-tomorrow.min.css" rel="stylesheet" />
